ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringInObjectLiteral/input.ts.stderr
error[1005]: Expected a property name
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringInObjectLiteral/input.ts:3:5
  |
3 |     `b`: 321
  |     ^

